# shopping-mapper

./: README.md
backend/: .gitignore  README.md  pyproject.toml  requirements.txt
backend/api/: main.py
backend/api/models/: memo2.py  product.py  supabase_client.py  user.py
backend/api/routes/: memo.py  product.py  user.py
backend/example/: about.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vercel.json  vite.config.ts
frontend/src/: App.tsx  App.vue  global.css  main.tsx  theme.ts
frontend/src/components/CurrentMemo/: index.ts
frontend/src/components/Home/: index.ts
frontend/src/components/Login/: index.ts
frontend/src/components/RecordMemo/: index.ts
frontend/src/components/Register/: index.ts
frontend/src/components/ui/: index.ts
frontend/src/models/memo/: entity.ts  repository.ts
frontend/src/models/product/: entity.ts  entityType.d.ts  repository.ts
frontend/src/models/userInfo/: entity.ts  repository.ts
frontend/src/routes/: Home.tsx  Login.tsx
frontend/src/routes/Home/: index.tsx
frontend/src/routes/Login/: index.tsx  style.ts
frontend/src/routes/Register/: index.tsx  style.ts
frontend/src/routes/_CurrentMemo/: index.tsx
frontend/src/routes/_ProductsMap/: index.tsx
frontend/src/routes/_RecordMemo/: index.tsx
frontend/src/service/: createMemo.ts  createProduct.ts  doneMemo.ts  doneProduct.ts  getAllDoneProducts.ts  getCurrentMemo.ts  getMemoProducts.ts  getfinishedMemo.ts  unDoneProduct.ts  userLogin.ts  userRegister.ts
frontend/src/utils/: callApi.ts
(+72 files in other folders)
