[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Takemoto-Tomohiro", email = "s2322039@stu.musashino-u.ac.jp" }
]
dependencies = [
    "fastapi>=0.111.1",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]
